--- a/scss/_mixins.scss
+++ b/scss/_mixins.scss
@@ -1,10 +1,10 @@
 // MIXINS
-@mixin flex($justify: space-between, $align: stretch, $direction: row) {
+@mixin flex($x: space-between, $y: stretch, $dir: row) {
   display: flex;
   flex-wrap: wrap;
-  justify-content: $justify;
-  align-items: $align;
-  flex-direction: $direction;
+  justify-content: $x;
+  align-items: $y;
+  flex-direction: $dir;
 }
 
 @mixin bgBasic($position: center, $size: cover) {
@@ -21,13 +21,12 @@
   $borderHover,
   $txtHover
 ) {
-  padding: 20px 40px;
+  padding: 0.4em 1.2em;
   background: $bgColor;
   border: 3px solid $borderColor;
   color: $txtColor;
-  font-size: 1.7rem;
-  text-transform: uppercase;
-  font-family: $lato;
+  text-transform: none;
+  font-family: $textFont;
   cursor: pointer;
   transition: $transition;
   @media (max-width: 767px) {
