--- a/scss/_mixins.scss
+++ b/scss/_mixins.scss
@@ -2,14 +2,19 @@
 @mixin flex($x: space-between, $y: stretch, $dir: row) {
   display: flex;
   flex-wrap: wrap;
-  justify-content: $x;
-  align-items: $y;
   flex-direction: $dir;
+  @if ($dir == row) {
+    justify-content: $x;
+    align-items: $y;
+  } @else if($dir == column) {
+    justify-content: $y;
+    align-items: $x;
+  }
 }
 
-@mixin bgBasic($position: center, $size: cover) {
-  background-position: $position;
-  background-size: $size;
+@mixin bgBasic($p: center, $s: cover) {
+  background-position: $p;
+  background-size: $s;
   background-repeat: no-repeat;
 }
 
